70 percent done